...
                    blurOnSubmit={false}
                    onSubmitEditing={() => passwordInputRef.current?.focus()}
                  />
                </>
              ) : (
                <FormField
                  testID="usernameInput"
                  label={copy.username}
                  value={username}
                  onChangeText={(value) => {
                    setUsername(value);
                    setErrorMessage(null);
                  }}
...
                  onSubmitEditing={() => passwordInputRef.current?.focus()}
                />
              )}

              <FormField
                ref={passwordInputRef}
                testID="passwordInput"
                label={copy.password}
                value={password}
                onChangeText={(value) => {
                  setPassword(value);
                  setErrorMessage(null);
                }}
...
